<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNom"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_nom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/textViewPrenom"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prenom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_prenom"
        android:inputType="textPersonName"
        android:autofillHints="personGivenName" />

    <Button
        android:id="@+id/bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/orange_primary"
        android:text="@string/btn_valider" />

    <TextView
        android:id="@+id/textViewIdLabel"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_id_etudiant" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id"
        android:inputType="number"
        android:autofillHints="none" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/orange_primary"
        android:text="@string/btn_chercher" />

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/orange_primary"
        android:text="@string/btn_supprimer" />

</LinearLayout>